# chiral-network

./: ..npmrc 2.icloud  .apas  .dockerignore  .gitignore  .package-lock 3.json.icloud  .test-relay-local 2.sh.icloud  ARCHITECTURE.md  CLAUDE.md  DOCKER_TESTING.md  Dockerfile  Dockerfile.local  Dockerfile.test-runner  HTTP_FILE_SHARING_GUIDE.md  POOL_DISCOVERY_DEBUG.md  PULL_REQUEST_SUMMARY.md  README.md  REPUTATION_SYSTEM_PLAN.md  TESTING.md  build-log.txt  docker-compose.isolated.yml  docker-compose.local-test.yml  docker-compose.production-net.yml  docker-compose.scaled-test.yml  docker-compose.test.yml  docker-compose.yml  genesis.json  index.html  install-tunnel-tools.sh  package-lock 4.json  package-lock.json  package.json  run-bootstrap.sh  svelte.config.js  tailwind.config.js  test-dht-connection.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.serena/: project.yml
demo/: http-transfer.sh
docs/: .BOOTSTRAP_HEALTH_INTEGRATION 2.md.icloud  .ED2K_PROTOCOL_IMPLEMENTATION 2.md.icloud  .code-reading-guide 2.md.icloud  .connection-retry 2.md.icloud  .webrtc 2.md.icloud  01-system-overview.md  02-architecture.md  05-api-documentation.md  06-security-privacy.md  ED2K_PROTOCOL_IMPLEMENTATION.md  FTP_SOURCE_IMPLEMENTATION.md  HTTP-file-sharing.md  HTTP_FILE_SHARING_GUIDE.md  HTTP_PROTOCOL_IMPLEMENTATION.md  INTERACTIVE_SHELL_GUIDE.md  Reachability-based-architecture.md  SIGNALING_SERVER_DEPLOYMENT.md  WEBRTC_SIGNALING_DEPLOYMENT.md  architecture.md  backend-api.md  bittorrent-implementation-guide.md  bugs.md  chiral-book.md  chiral-high-level.md  chiral-network-book.md  code-reading-guide.md  connection-retry.md  contributing.md  deployment-guide.md  developer-setup.md  download-restart.md  download-retry.md  file-sharing.md  headless-mode.md  i18n.md  implementation-guide.md  index.md  nat-traversal-guide.md  nat-traversal.md  network-protocol.md  (+17 more)
fm_agent/: .gitignore  extractor.py  phases.json
notes/: files_to_change.md  overview.md  transaction_api.md  transaction_frontend_final_implementation_plan.md
relay/: Cargo.toml
scripts/: analyze-contributions.cjs  docker-test.sh  extended-feature-test.sh  full-feature-test.sh  local-test-cluster.sh  quick-docker-test.sh  run-e2e-tests.sh  run-tests.bat  run-tests.sh  scaled-test.sh  stress-test-30-nodes.sh  tauri-runner.mjs  user-simulation.sh
site/: index.html  style.css
src/: App.svelte  app.css  env.d.ts  main.ts
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
tests/: README.md  chiralDropStore.test.ts  chunk-scheduler.test.ts  dhtBootstrap.test.ts  dhtService.test.ts  diagnosticsLogHistory.test.ts  downloadHistoryService.test.ts  driveApiService.test.ts  driveStore.test.ts  encryptedHistoryService.test.ts  encryptionService.test.ts  fileIcons.test.ts  fileService.test.ts  gethService.test.ts  hostingPageUtils.test.ts  hostingPageUtilsExtended.test.ts  hostingService.test.ts  mining.test.ts  networkEndpointConfig.test.ts  peerEventService.test.ts  proxyLatencyOptimization.test.ts  pure-client-mode.test.ts  ratingApiService.test.ts  saved-recipients.test.ts  seederSort.test.ts  setup.ts  speedTiers.test.ts  stores.test.ts  toastStore.test.ts  uiPositioning.test.ts  upload-download.test.ts  uploadDownloadFlow.test.ts  utils.test.ts  wallet.test.ts  walletBackupService.test.ts  walletService.test.ts  withTimeout.test.ts
v2-chiral-network/: CHANGELOG.md  IMPLEMENTATION.md  README.md  bugs-to-fix.md  chunked-transfer-plan.md  package-lock.json  package.json  project-outline.md  tsconfig.json  v2-chiral-network-book.md  (+1 more)
v2-chiral-network/src-tauri/: Cargo.toml  tauri.conf.json
v2-chiral-network/src-tauri/capabilities/: default.json
v2-chiral-network/src-tauri/src/: dht.rs  drive_api.rs  drive_storage.rs  encryption.rs  file_transfer.rs  geth.rs  geth_bootstrap.rs  hosting.rs  hosting_server.rs  lib.rs  main.rs  relay_share_proxy.rs  reputation.rs  speed_tiers.rs
(+398 files in other folders)
