[package]
name = "chiral-network-v2"
version = "2.0.0"
description = "Chiral Network V2"
authors = ["you"]
edition = "2021"

[lib]
name = "chiral_network_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["kad", "tcp", "noise", "yamux", "ping", "identify", "mdns", "macros", "tokio", "request-response", "cbor"] }
futures = "0.3"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
rfd = "0.15"
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
futures-util = "0.3"
secp256k1 = { version = "0.29", features = ["recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rlp = "0.5"
